--- a/roles/cardano-node/templates/cardano-node.service.j2
+++ b/roles/cardano-node/templates/cardano-node.service.j2
@@ -12,6 +12,8 @@ Type            = simple
 PrivateTmp      = true
 ExecStart       = /opt/cardano/cnode/scripts/start-node.sh
 ExecStop        = /opt/cardano/cnode/scripts/stop-node.sh
+KillSignal      = SIGINT
+RestartKillSignal= SIGINT
 PIDFile         = /run/cardano/%i.pid
 User            = {{ server_username }} 
 Group           = {{ server_username }}
